# VIPilot

./: .gitattributes  .gitignore  .replit  CONVENTIONS.md  conventions.md  db_service_old.py  exceptions.py  gunicorn.conf.py  main.py  monitor_old.js  pyproject.toml  replit.md  replit.nix  run_local.py  seed_prod.sql  startup.py  statuses.py  update_package.yaml  upgrade.py  vk_video_post.py
.agents/: agent_assets_metadata.toml
attached_assets/: Pasted-29-03-08-35-33-Errno-2-No-such-file-or-directory-ffmpeg_1774773405252.txt  Pasted-29-03-16-31-14--1774791475589_1774791475589.txt
clients/: common.py  dzen.py  falai.py  grok.py  openrouter.py  rutube.py  seedance.py  skyreels.py  target_session.py  text_client.py  vk.py  vkvideo.py
common/: environment.py  exceptions.py  gunicorn.conf.py  shutdown.py  startup.py  statuses.py
config/: metaprompt.txt  settings.json
data/: dzen_cookies.json
db/: __init__.py  connection.py  cycle_config.py  db.py  db_media.py  db_pipeline.py  db_service.py  db_simple.py  db_ui.py  init.py  migrations.py  seed.py  upgrade.py
deploy/: Deploy VIPilot.bat  Deploy.bat  Pull.bat  Restart.bat  Start VIPlot Service.bat  Start.bat  Stop VIPlot Service.bat  Stop.bat
docs/: conventions.md  project-conventions.md  publish-overlay-convention.md  upgrade-convention.md
log/: __init__.py  log.py
pipelines/: __init__.py  base.py  cleanup.py  dispatch.py  planning.py  prompt.py  publish.py  recovery.py  routing.py  runner.py  story.py  transcode.py  video.py
routes/: admin.py  api.py  browser_widget.py  dzen_browser.py  register.py  web.py  (+2 more)
(+4819 files in other folders)
